--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,9 @@
         <div class="col-xs-12">
             <h3>This is the App Component</h3>
             <hr>
+            <!-- <div app-servers></div> -->
             <app-servers></app-servers>
+            <!-- <div class="app-servers"></div> -->
         </div>
     </div>
 </div>
